--- a/mysql-verify.gradle
+++ b/mysql-verify.gradle
@@ -3,13 +3,13 @@ apply from: 'build.gradle'
 import groovy.sql.Sql
 
 task createUsersTest(dependsOn: loadDriver) << {
-	onUsers { 
+	onUsers(project.mysqlJdbcUrl) {
 		assert it.containsAll(users.split(',')), "Users ${users.split(',') - it} does not exist in $dburl"
 	}
 }
 
 task removeUsersTest(dependsOn: loadDriver) << {
-	onUsers { 
+	onUsers(project.mysqlJdbcUrl) {
 		assert !it.containsAll(users.split(',')), "Users ${it.intersect(users.split(',') as List)} exist in $dburl"
 	}
 }
@@ -22,8 +22,8 @@ task removeSchemaTest(dependsOn: loadDriver) << {
 	onSchema("Schemas $schema exist in $dburl") { sql -> !sql.connection.metaData }
 }
 
-def onUsers(closure) {
-	def sql = Sql.newInstance(dburl, admin, adminpass)
+def onUsers(jdbcUrl, closure) {
+	def sql = Sql.newInstance(jdbcUrl, admin, adminpass)
 	def users = sql.dataSet('mysql.user').rows().collect { it.User }
 	closure(users)
 }
