--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 import groovy.sql.Sql
 
+apply from: 'mysql.gradle'
+apply from: 'sqlserver.gradle'
+
 repositories {
-    flatDir {
-        dirs 'lib'
-    }
+    flatDir { dirs 'lib' }
 }
 
 configurations {
@@ -16,14 +17,14 @@ dependencies {
 
 ext {
 	// jdbc urls:
-	mysqlJdbcUrl = "jdbc:mysql://${dburl}:3306"
-	mssqlUrl 	 = "jdbc:sqlserver://${dburl}:1433"
+	mysqlJdbcUrl 		= "jdbc:mysql://${dburl}:3306"
+	sqlserverJdbcUrl 	= "jdbc:sqlserver://${dburl}:1433"
 
 	// jdbc passwords:
-	mysqlClass = 'com.mysql.jdbc.Driver'
-	oracleClass = 'oracle.jdbc.OracleDriver'
-	sqlserverClass = 'com.microsoft.sqlserver.jdbc.SQLServerDriver'
-	hanaClass = 'com.sap.db.jdbc.Driver'
+	mysqlClass 			= 'com.mysql.jdbc.Driver'
+	oracleClass 		= 'oracle.jdbc.OracleDriver'
+	sqlserverClass 		= 'com.microsoft.sqlserver.jdbc.SQLServerDriver'
+	hanaClass 			= 'com.sap.db.jdbc.Driver'
 }
 
 configurations.driver.each {
@@ -35,19 +36,23 @@ task loadDriver << {
 }
 
 task createAccounts(dependsOn: loadDriver) << {
-	execute(project."${db}JdbcUrl") { sql, user, schema, password ->
-		sql.execute project."${db}CreateUser"(user, password)
+	execute(project."${db}JdbcUrl") { sql, user, password, schema ->
 		sql.execute project."${db}CreateSchema"(schema)
+		println "Schema $schema has been created on $dburl"
+
+		sql.execute project."${db}CreateUser"(user, password)
 		sql.execute project."${db}ConnectUserToSchema"(user, password, schema)
-		println "User ${user} with password ${password} has been created for ${schema} schema on $dburl."
+		println "User $user with password $password has been created on $dburl."
 	}
 }
 
 task cleanup(dependsOn: loadDriver) << {
-	execute(project."${db}JdbcUrl") { sql, user, schema, password ->
+	execute(project."${db}JdbcUrl") { sql, user, password, schema ->
 		sql.execute project."${db}DeleteUser"(user)
+		println "User $user has been removed on $dburl"
+
 		sql.execute project."${db}DeleteSchema"(schema)
-		println "User ${user} and ${schema} schema has been removed on $dburl."
+		println "Schema $schema has been removed on $dburl."
 	}
 }
 
@@ -58,29 +63,10 @@ def execute(jdbcUrl, closure) {
 
 	if ((users.size() == passwords.size()) && (users.size() == schemas.size())) {
 		def sql = Sql.newInstance(jdbcUrl, admin, adminpass)
-
 		for (i in 0..schemas.size() - 1) {
 			closure(sql, users[i], passwords[i], schemas[i])
 		}
+	} else {
+		throw new GradleException('You have to pass the same count of users, passwords and schemas.')
 	}
-}
-
-String mysqlCreateUser(user, password) {
-	return "CREATE USER $user@$dburl IDENTIFIED BY '$password';"
-}
-
-String mysqlCreateSchema(schema) {
-	return "CREATE DATABASE IF NOT EXISTS $schema;"
-}
-
-String mysqlConnectUserToSchema(user, password, schema) {
-	return "GRANT ALL PRIVILEGES ON $schema.* TO '$user'@'$dburl';"
-}
-
-String mysqlDeleteUser(user) {
-	return "DROP USER $user@$dburl;"
-}
-
-String mysqlDeleteSchema(schema) {
-	return "DROP DATABASE $schema;"
 }
